# Millipede

./: README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/customer/: auth.py  projects.py  runcard.py  uploads.py
backend/app/api/engineer/: projects.py  review.py
backend/app/api/ws/: runcard.py
backend/app/auth/: deps.py  jwt.py
backend/app/domain/pack/: autoda_packer.py
backend/app/infra/db/: base.py  models.py
backend/app/infra/eventbus/: redis_bus.py
backend/app/infra/llm/: client.py
backend/app/infra/sandbox/: base.py  docker_client.py
backend/app/infra/storage/: client.py
backend/app/orchestration/agent_runner/: prompts.py  runner.py  schemas.py
backend/app/orchestration/state_machine/: autoda.py  persistence.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: autoda.py  packaging.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/app/customer/: layout.tsx  page.tsx
frontend/src/app/customer/deliveries/: page.tsx
frontend/src/app/customer/new/: page.tsx
frontend/src/app/customer/projects/[id]/: page.tsx
frontend/src/app/engineer/: layout.tsx  page.tsx
frontend/src/app/engineer/reviews/: page.tsx
frontend/src/app/engineer/reviews/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  ws.ts
frontend/src/store/: auth.ts
infra/sandbox/: Dockerfile
