[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "millipede-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Auth
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Cache & Queue
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",

    # Object storage
    "boto3>=1.34.0",
    "minio>=7.2.0",

    # State machine
    "transitions>=0.9.0",

    # LLM
    "litellm>=1.40.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",

    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",

    # Docker sandbox
    "docker>=7.1.0",

    # Data science (used in uploads.py schema extraction + sandbox)
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "pdfplumber>=0.11.0",

    # Utilities
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "structlog>=24.4.0",
    "anyio>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
